# quant-risk-platform

./: .clang-format  .gitignore  .pre-commit-config.yml  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  QUICKSTART.md  README.md  STYLE.md  USAGE.md  clang.env.sh.example  gcc.env.sh.example  msvc.env.cmd.example  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: tests.yml
benchmarks/: README.md  benchmark_portfolio.cpp
cmake/: Dependencies.cmake  README.md
coverage/: coverage_summary.json  coverage_summary.md  coverage_summary.py
coverage/cpp/: coverage_metric.py
coverage/python/: coverage_metric.py
cpp/: README.md
cpp/benchmarks/: README.md  benchmark_portfolio.cpp
cpp/bindings/: bind_analytics.cpp  bind_domain.cpp  bind_io.cpp  bind_lsmc.cpp  bind_market.cpp  bind_revaluation.cpp  bindings.hpp  module.cpp
cpp/cli/: main.cpp
cpp/src/analytics/: cashflow_extractor.cpp  (+13 more)
data/: README.md  generate_portfolio_fixtures.py
data/market/: base_market.json  base_market_v2.json  demo_market.json
data/portfolios/: adventurous_commodity_volatility_portfolio.json  adventurous_model_portfolio.json  aggressive_growth_model_portfolio.json  balanced_core_model_portfolio.json  balanced_growth_model_portfolio.json  balanced_multi_asset_income_portfolio.json  cash_plus_model_portfolio.json  cautious_fx_carry_portfolio.json  cautious_model_portfolio.json  conservative_credit_income_portfolio.json  conservative_income_model_portfolio.json  defensive_income_model_portfolio.json  demo_macro_book.json  demo_multi_asset_book_v2.json  demo_portfolio.json  growth_global_macro_portfolio.json  growth_model_portfolio.json  high_growth_equity_volatility_portfolio.json  high_growth_model_portfolio.json  liquidity_reserve_model_portfolio.json  stable_balanced_model_portfolio.json  stable_balanced_rates_hedged_portfolio.json
data/regression/: demo_golden.json
data/scenarios/: demo_scenarios.json  sample_scenarios.json
docs/: README.md
docs/architecture/: ANALYTICS_SERVICES.md  ARCHITECTURE.md  CURVE_BOOTSTRAP_DESIGN.md  DATA_STORAGE_LINEAGE_AND_RECONCILIATION.md  FACTOR_ONLY_SCENARIO_REFACTOR_REVIEW.md  IMPLEMENTATION_CHOICES.md  INDEX.md  MARKET_AND_CURVES.md  PLATFORM_IMPLEMENTATION_GUIDE.md  PYTHON_CPP_PERFORMANCE_AND_BINDINGS.md  QUANTLIB_CURVE_API_REFERENCE.md
docs/asset-classes/: INDEX.md
docs/design/: ANALYTICS_SERVICES.md  ARCHITECTURE.md  CURVE_BOOTSTRAP_DESIGN.md  DATA_STORAGE_LINEAGE_AND_RECONCILIATION.md  FACTOR_ONLY_SCENARIO_REFACTOR_REVIEW.md  IMPLEMENTATION_CHOICES.md  INDEX.md  MARKET_AND_CURVES.md  PLATFORM_IMPLEMENTATION_GUIDE.md  PYTHON_CPP_PERFORMANCE_AND_BINDINGS.md  QUANTLIB_CURVE_API_CHEAT_SHEET.md
docs/foundations/: ASSET_PRICING_FOUNDATIONS.md  BROWNIAN_MOTION_AND_ITO.md  CHARACTERISTIC_FUNCTIONS_AND_FOURIER.md  CHARACTERISTIC_FUNCTIONS_MGFS_AND_CONVERGENCE.md  INDEX.md  MARKOWITZ_PORTFOLIO_THEORY.md  MEAN_REVERSION_AND_SHORT_RATE_MODELS.md  PROBABILITY_LIMIT_THEOREMS.md  RANDOM_VARIABLES_EXPECTATION_VARIANCE.md  STATISTICAL_DISTRIBUTIONS_AND_MLE.md
docs/implementation/: INDEX.md  PHASED_BUILD_PLAN.md
docs/market-data/: INDEX.md  MULTI_ASSET_MARKET_DATA_AND_CURVES.md
docs/models/: INDEX.md
docs/pricing/: CREDIT_CURVE_CONSTRUCTION.md  INDEX.md  MULTI_ASSET_MARKET_DATA_AND_CURVES.md  VOLATILITY_SURFACES.md  YIELD_CURVE_AND_OIS_CONSTRUCTION.md
docs/reference/: FORMULAS.md  INDEX.md  LEXIS.md  SOURCES.md
docs/risk/: FRONT_OFFICE_AND_RISK_WORKING_PRACTICES.md  GLOBAL_MACRO_AND_TRADER_WORKFLOW.md  HISTORICAL_STRESS.md  INDEX.md  MACRO_INDICATORS_AND_INDEX_CONSTRUCTION.md  MACRO_REGIMES_AND_EVENT_FLOWS.md  MONTE_CARLO.md  MONTE_CARLO_FOUNDATIONS.md  MONTE_CARLO_IMPLEMENTATION.md  PNL_EXPLAIN_IN_PRACTICE.md  RISK_FACTORS_AND_ATTRIBUTION.md  RISK_MEASURES_AND_EXPLAIN.md  TIME_SERIES_AND_SCENARIOS.md  VALUATION_RISK_CONTROL_WORKFLOWS.md  VAR.md  VAR_STRESS_BACKTESTING_AND_AGGREGATION.md
docs/theory/: ASSET_PRICING_FOUNDATIONS.md  BROWNIAN_MOTION_AND_ITO.md  CHARACTERISTIC_FUNCTIONS_AND_FOURIER.md  CHARACTERISTIC_FUNCTIONS_MGFS_AND_CONVERGENCE.md  INDEX.md  MARKOWITZ_PORTFOLIO_THEORY.md  MEAN_REVERSION_AND_SHORT_RATE_MODELS.md  PROBABILITY_LIMIT_THEOREMS.md  RANDOM_VARIABLES_EXPECTATION_VARIANCE.md  STATISTICAL_DISTRIBUTIONS_AND_MLE.md
python/: README.md  pyproject.toml  requirements.txt
python/examples/: demo_dashboard.py  demo_optimizer.py  demo_platform.py
python/examples/dashboard/: allocation_controls.html  card.html  dashboard.css  dashboard.js  dashboard_tab_button.html  dashboard_tabs.html  dashboard_template.html  data_table.html  initial_theme.js  lazy_panel_body.html  panel.html  panel_note.html  portfolio_view.html  select_option.html  status_pill.html  table_cell.html  table_empty_row.html  table_header_cell.html  table_row.html
python/github/: README.md
python/qrp/optimization/: cvxpy_worker.py
scripts/: README.md  build.ps1  build.sh  compute.ps1  compute.sh  coverage_metric.py  emit_ci_error_tail.py  env.ps1  env.sh  format.ps1  format.py  format.sh  init.ps1  init.sh  inspect.ps1  inspect.sh  install.ps1  install.sh  python_coverage_metric.py  test.ps1  test.sh  visualize.ps1  visualize.sh
tests/: CMakeLists.txt  README.md
tests/integration/: test_portfolio_golden_coverage.cpp  test_risk.cpp  test_valuation.cpp
tests/python/: test_cvxpy_worker.py  test_lsmc_bindings.py
tests/support/: test_paths.hpp
tests/unit/: test_app_workflows.cpp  test_commodity_products.cpp  test_conventions.cpp  test_covariance.cpp  test_credit_products.cpp  test_dummy.cpp  test_equity_products.cpp  test_fx_products.cpp  test_instrument_factory_common.cpp  test_market.cpp  test_monte_carlo.cpp  test_monte_carlo_aging.cpp  test_persistence.cpp  test_rates_products.cpp  test_scenario_engine.cpp  test_trade_model.cpp
tests/unit/analytics/: test_lsmc_american_put.cpp  test_pnl_explain.cpp  test_regression.cpp  test_simulation.cpp  test_valuation_and_stress.cpp  test_var_contribution.cpp
tests/unit/optimization/: test_optimization_engine.cpp
var/: README.md
(+139 files in other folders)
