[build-system]
requires = ["cmake", "pybind11", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-risk-platform"
version = "0.1.0"
description = "Python bindings for the C++ Quant Risk Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Florian Barras", email = "florian@barras.io"}
]
dependencies = [
    "nlohmann-json",
]

[tool.setuptools]
packages = [] # The module is built via CMake, not standard setuptools discovery
